--- a/src/Interface/Tomografo.form
+++ b/src/Interface/Tomografo.form
@@ -235,7 +235,7 @@
                               <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
-                      <EmptySpace pref="230" max="32767" attributes="0"/>
+                      <EmptySpace pref="212" max="32767" attributes="0"/>
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
                           <Group type="102" attributes="0">
                               <Component id="jButton3" min="-2" pref="164" max="-2" attributes="0"/>
@@ -686,9 +686,12 @@
     <Component class="javax.swing.JSpinner" name="Fm">
       <Properties>
         <Property name="model" type="javax.swing.SpinnerModel" editor="org.netbeans.modules.form.editors2.SpinnerModelEditor">
-          <SpinnerModel initial="0.0" maximum="50000.0" minimum="0.0" numberType="java.lang.Double" stepSize="2.0" type="number"/>
+          <SpinnerModel initial="0.0" maximum="5.0E7" minimum="0.0" numberType="java.lang.Double" stepSize="100.0" type="number"/>
         </Property>
         <Property name="toolTipText" type="java.lang.String" value="[MHz]"/>
+        <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
+          <Color id="Cursor Por defecto"/>
+        </Property>
         <Property name="name" type="java.lang.String" value="" noResource="true"/>
       </Properties>
       <AccessibilityProperties>
